test/fail/M0216/lib.mo
module {
  public type T = Nat;
}
